Bug 1698307 - Make sure the npnToken is cleared if we don't want to use h2 r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D109065